test/errors/equ1.input.asm

* = $801

!let irqline0 = 13
!let irqline0 = 52

    lda #0
